# dmlab-gym

./: .bazelrc  .gitignore  BUILD  Dockerfile.build  LICENSE  README.md  WORKSPACE  build_wheel.sh  pyproject.toml  python_system.bzl
dmlab_gym/: __init__.py  __main__.py  cli.py  env.py  wrappers.py
docs/environments/: core.md  explore.md  language.md  lasertag.md  natlab.md  psychlab.md  rooms.md  skymaze.md
engine/code/deepmind/: dmlab_connect.c
examples/: game_main.py  gymnasium_test.py
python/: dmenv_module.py
python/pip_package/: __init__.py  build_pip_package.sh  setup.py
tests/: conftest.py  test_action_discretize.py  test_common_wrappers.py  test_env.py  test_levels.py  test_memory.py  test_observation_wrappers.py  test_registration.py  test_render.py  test_split_rgbd.py
