[project]
name = "dmlab-gym"
version = "0.2.0"
description = "DeepMind Lab with Bazel 8, Python 3.13, and Gymnasium support"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-2.0-only"
authors = [{ name = "Achronus" }]
dependencies = [
    "deepmind-lab",
    "gymnasium>=1.2.3",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "gymnasium[other]>=1.2.3"]

[project.scripts]
dmlab-gym = "dmlab_gym.cli:main"

[project.urls]
Repository = "https://github.com/Achronus/dmlab-gym"
Upstream = "https://github.com/google-deepmind/lab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["bazel-*", "lab", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["dmlab_gym"]

[tool.hatch.build.targets.sdist]
include = ["dmlab_gym/", "README.md", "LICENSE", "pyproject.toml"]

[tool.uv.sources]
deepmind-lab = { path = "lab/deepmind_lab-1.0-py3-none-any.whl" }
